start of creating an user account

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <h1>Welcome to WiseApp</h1>
+    <br>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, class: name %>
+    <% end %> 
     <%= yield %>
   </body>
 </html>
