--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,27 @@
 <h3>Create Account below to get started!</h3>
 
 <%= form_with url: "/users", method: :post, local: :true do |form|%>
-  <%= form.label :name%>
-  <%= form.text_field :name %>
-  <br>
-  <%= form.label :email%>
-  <%= form.text_field :email %>
-  <br>
-  <%= form.label :password %>
-  <%= form.password_field :password %>
-  <br>
-  <%=form.label :password_confirmation %>
-  <%=form.password_field :password_confirmation %>
-  <br>
-  <%= form.label :phone_number %>
-  <%= form.telephone_field :phone_number%>
-  <br>
-  <%= form.label :birthday %>
-  <%= form.date_field :birthday %>
-  <br>
+  <p><%= form.label :first_name%>
+  <%= form.text_field :first_name %></p>
+
+  <p><%= form.label :last_name%>
+  <%= form.text_field :last_name %></p>
+
+  <p><%= form.label :email%>
+  <%= form.text_field :email %></p>
+
+  <p><%= form.label :password %>
+  <%= form.password_field :password %></p>
+
+  <p><%=form.label :password_confirmation %>
+  <%=form.password_field :password_confirmation %></p>
+
+  <p><%= form.label :phone_number %>
+  <%= form.telephone_field :phone_number%></p>
+
+  <p><%= form.label :birthday %>
+  <%= form.date_field :birthday %></p>
+  
 <div class='address'>
     <%=form.fields_for :address do |a| %>
         <div class="street">
