--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<p><%= link_to 'Dashboard', %></p>
-<p><%= link_to 'Medical Page', %></p>
-<p><%= link_to 'Social Page', %></p>
+<p><%= link_to 'Dashboard', dashboard_path%></p>
+<%# <p><%= link_to 'Medical Page', %></p>
+<%# <p><%= link_to 'Social Page', %></p>
 
-<h2><%=@user.name%></h2>
-<h2><%=@user.birthday%></h2>
+<%# <h2><%=@user.name%></h2> %>
+<%# <h2><%=@user.birthday%></h2> %>
 
