--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Landing Page</h1>
 
 <p><%= link_to "Login Here", "/login" %></p>
+<p><%= link_to "Log In with Google", "/auth/google_oauth2" %></p>
 <p><%= link_to "Create Account", new_user_path%></p>
