--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>User Show Page</h1>
 
-<p><%= link_to 'Dashboard', user_path(@user) %></p>
+<%# <p><%= link_to 'Dashboard', user_path(@user) %></p> %>
 
 <%# <p><%= link_to 'Medical Page', %></p>
 <%# <p><%= link_to 'Social Page', %></p>
