--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h3>Create Account below to get started!</h3>
 
-<%= form_with url: '/users', method: :post, local: :true do |form|%>
+<%= form_with url: '/users/new', method: :post, local: :true do |form|%>
   <p><%= form.label :first_name%>
   <%= form.text_field :first_name %></p>
 
