--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome <%= @user.email %> </h1>
+<h1>Welcome </h1>
 
 <p><%= link_to 'Dashboard', dashboard_path%></p>
 <%# <p><%= link_to 'Medical Page', %></p>
