Make changes to meds file

--- a/app/views/meds/index.html.erb
+++ b/app/views/meds/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Medical Index Page</h1>
 
 <%= link_to "Dashboard", "/dashboard" %>
-<%= link_to "Medical Page", "/users/1/meds" %>
+<%= link_to "MyMeds", "/users/1/meds" %>
 
 <h3>Current Medications</h3>
 
