--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<h1>Welcome </h1>
+
+<h1>Welcome <%= @user[:attributes][:name] %> </h1>
 
 <%= link_to 'Dashboard', dashboard_path %>
-<%= link_to "MyMeds", "/users/1/meds" %>
+<%= link_to "MyMeds", "/users/#{@user[:id]}/meds" %>
