Add styling to landing and user pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,10 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
-    <link rel="stylesheet", href="css/style.css">
+    <link href="https://unpkg.com/tailwindcss@2.2.7/dist/tailwind.min.css" rel="stylesheet">
   </head>
 
   <body>
-    <h1>Welcome to WiseApp</h1>
-    <br>
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: name %>
     <% end %> 
