--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,8 +1,18 @@
-
-<div class="container mx-auto pt-5">
-  <h1 class="text-5xl">Landing Page</h1>
-
-  <p class="text-base font-light leading-relaxed mt-5 mb-4"><%= link_to "Login Here", "/login" %></p>
-  <p><%= link_to "Log In with Google", "/auth/google_oauth2" %></p>
-  <p><%= link_to "Create Account", new_user_path%></p>
+<div class="flex flex-col items-center justify-center h-screen">
+  <h1 class="text-4xl font-bold text-gray-800 mb-4">Welcome to WiseApp</h1>
+  <div class="sm:w-full sm:max-w-md">
+    <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+      <div class="flex flex-col space-y-4">
+        <div>
+          <%= link_to "Login Here", "/login", class: "w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" %>
+        </div>
+        <div>
+          <%= link_to "Log In with Google", "/auth/google_oauth2", class: "w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" %>
+        </div>
+        <div>
+          <%= link_to "Create Account", new_user_path, class: "w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
