--- a/app/views/meds/index.html.erb
+++ b/app/views/meds/index.html.erb
@@ -1,7 +1,10 @@
-<h1>Medical Index Page</h1>
-
-<%= link_to "Dashboard", "/dashboard" %>
-<%= link_to "MyMeds", "/users/1/meds" %>
+<div class="flex justify-between items-center bg-gray-100 py-4 px-8">
+  <h1 class="text-2xl font-bold">MyMeds</h1>
+  <div>
+    <%= link_to 'Dashboard', dashboard_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mr-4" %>
+    <%= link_to 'MyMeds', "/users/1/meds", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
+  </div>
+</div>
 
 <h3>Current Medications</h3>
 
