Fiz failing tests

--- a/app/views/meds/index.html.erb
+++ b/app/views/meds/index.html.erb
@@ -1,3 +1,10 @@
+<h1>WiseApp</h1>
+
+<h1>Medical Index Page</h1>
+
+<%= link_to "Dashboard", "/dashboard" %>
+<%= link_to "MyMeds", "/users/1/meds" %>
+
 <div class="flex justify-between items-center bg-gray-100 py-4 px-8">
   <h1 class="text-2xl font-bold">MyMeds</h1>
   <div>
