--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h3 class="text-xl font-bold mb-4">Create Account below to get started!</h3>
+<h3 class="text-xl font-bold mb-4">Welcome to WiseApp. Create Account below to get started!</h3>
 
 <%= form_with url: '/users/new', method: :post, local: true do |form|%>
 <div class="bg-white rounded-lg overflow-hidden shadow-md px-8 pt-6 pb-8 mb-4">
