--- a/app/views/meds/index.html.erb
+++ b/app/views/meds/index.html.erb
@@ -32,7 +32,7 @@
 <div id="meds-searched">
   <% if params[:search] %>
     <% @all_drugs_searched.each do |drug| %>
-        <p><%= drug.synonym %> <%= link_to "Add", "/users/1/meds" %></p>
+        <p><%= drug.synonym %> <%= link_to "Add", user_meds_new_path(user_id: 1, rxcui: drug.rxcui, name: drug.name, synonym: drug.synonym ) %></p>
     <% end %>
   <% end%>
 </div>
