Add feat: consumption of API endpoint to see get all interactions based off collection of rxcui attributes. Added new spec, poros, and fixtures, as well as refactored some specs, views, controllers, services, and facades.

--- a/app/views/meds/index.html.erb
+++ b/app/views/meds/index.html.erb
@@ -36,3 +36,12 @@
     <% end %>
   <% end%>
 </div>
+
+<h3>Interactions:</h3>
+<div id="interactions">
+  <ul>
+    <% @interactions.each do |interaction| %>
+      <li><p><%= interaction.description %></p></li>
+    <% end %>
+  </ul>
+</div>
