adds work add med form

--- a/app/views/meds/new.html.erb
+++ b/app/views/meds/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Add a medication to your list</h1>
-<p>Name of Medication:<%= @medication_name %></p>
+<h2>Name of Medication:<%= @medication_name %></h2>
 
 <p><%= form_with url: "/users/#{@user_id}/meds", method: :post, local: :true do |form| %></p>
 
