needs touch ups

--- a/app/views/meds/index.html.erb
+++ b/app/views/meds/index.html.erb
@@ -33,7 +33,7 @@
   <% if params[:search] %>
     <% @all_drugs_searched.each do |drug| %>
       <div id="medication-<%= drug.rxcui %>">
-        <p><%= drug.synonym %> <%= link_to "Add", user_meds_new_path(user_id: 1, rxcui: drug.rxcui, name: drug.name, synonym: drug.synonym ) %></p>
+        <p><%= drug.synonym %> <%= link_to "Add", user_meds_new_path(user_id: @user_id, rxcui: drug.rxcui, name: drug.name, synonym: drug.synonym ) %></p>
     </div>
     <% end %>
   <% end%>
