--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,5 @@
   <p class="block text-gray-700 font-bold mb-2">Name:</p>
   <p class="block text-gray-700 mb-2"><%= @user.name %></p>
   <p class="block text-gray-700 font-bold mb-2">Birthday:</p>
-  <p class="block text-gray-700 mb-2""><%= @user.birthday %></p>
+  <p class="block text-gray-700 mb-2"><%= @user.birthday %></p>
 </div>
